--- a/frontend/app/ui/templates/base.html
+++ b/frontend/app/ui/templates/base.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8" />
+        {% if jquery }
+        <script src="/static/jquery-3.3.1.min.js" type="text/javascript"></script>
+        {% endif %}
         {% if title %}
         <title>{{ title }}</title>
         {% else %}
