--- a/frontend/app/ui/templates/base.html
+++ b/frontend/app/ui/templates/base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        {% if jquery }
+        {% if jquery %}
         <script src="/static/jquery-3.3.1.min.js" type="text/javascript"></script>
         {% endif %}
         {% if title %}
