--- a/frontend/app/ui/templates/base.html
+++ b/frontend/app/ui/templates/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         {% if jquery %}
-        <script src="/static/jquery-3.3.1.min.js" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename='jquery-3.3.1.min.js') }}" type="text/javascript"></script>
         {% endif %}
         {% if title %}
         <title>{{ title }}</title>
