Add script support to index page
The route for the index page has been edited to support the insertion of extra
scripts via the template.  Also, the base template has been modified to support
this feature.

--- a/frontend/app/ui/templates/base.html
+++ b/frontend/app/ui/templates/base.html
@@ -11,6 +11,9 @@
         <title>Skitter</title>
         {% endif %}
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheet.css') }}">
+        {% if scripts %}
+        {% block scripts %}{% endblock %}
+        {% endif %}
     </head>
     <body>
         {% block content %}{% endblock %}
