Added site-wide javascript
A script has been added that contains helper functions to be used on a
site-wide basis.  This script currently only has a function that gets a cookie
of a specific name from the browser.

--- a/frontend/app/ui/templates/base.html
+++ b/frontend/app/ui/templates/base.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         {% if jquery %}
         <script src="{{ url_for('static', filename='jquery-3.3.1.min.js') }}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename='skitter.js') }}" type="text/javascript"></script>
         {% endif %}
         {% if title %}
         <title>{{ title }}</title>
