Use placeholders in input boxes
I was using the "value" attribute to set placeholders.  Turns out there's
actually a "placeholder" attribute instead!  It looks so much better.  It
doesn't autofill the form.  Let's use that instead.

--- a/frontend/app/ui/templates/index.html
+++ b/frontend/app/ui/templates/index.html
@@ -8,8 +8,8 @@
     <h1>Under Construction</h1>
     <p>Skitter is currently under construction.  Please come back later!</p>
     <form id="loginForm">
-        <input type="text" id="username" value="Username" /><br />
-        <input type="password" id="password" value="Password" /><br />
+        <input type="text" id="username" placeholder="Username" /><br />
+        <input type="password" id="password" placeholder="Password" /><br />
         <input type="submit" value="Log In" />
     </form>
 {% endblock %}
