--- a/frontend/app/ui/templates/base.html
+++ b/frontend/app/ui/templates/base.html
@@ -11,7 +11,8 @@
         {% else %}
         <title>Skitter</title>
         {% endif %}
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheet.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheet.css') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}" />
         {% if scripts %}
         {% block scripts %}{% endblock %}
         {% endif %}
