Keep image size
The squirrel image on the landing page can take a bit to load.  If you don't
specify the dimensions in the img tag, page loading can look a little funky.
This fixes that.

--- a/frontend/app/ui/templates/index.html
+++ b/frontend/app/ui/templates/index.html
@@ -19,6 +19,6 @@
         <p>Because little blue birds are dumb.</p>
         <!-- <p>Note: not guaranteed to be free of Russian influence.</p> -->
     </div>
-    <img src="{{ url_for('static', filename='skitter.png') }}" alt="Skitter Squirrel" class="box"/>
+    <img src="{{ url_for('static', filename='skitter.png') }}" alt="Skitter Squirrel" class="box" height="300" width="300" />
 </div>
 {% endblock %}
