Display error text when auth fails
The user should be notified when the authentication fails.  The user interface
has been updated to reflect this.

--- a/frontend/app/ui/templates/index.html
+++ b/frontend/app/ui/templates/index.html
@@ -13,7 +13,10 @@
             <ul class="form">
                 <li><input type="text" id="username" placeholder="Username" class="input border" /></li>
                 <li><input type="password" id="password" placeholder="Password" class="input border" /></li>
-                <li><input type="submit" value="Log In" class="login border" /></li>
+                <li>
+                    <input type="submit" value="Log In" class="login border" />
+                    <span id="errorText"></span>
+                </li>
             </ul>
         </form>
         <p>Because little blue birds are dumb.</p>
