--- a/frontend/app/ui/templates/base.html
+++ b/frontend/app/ui/templates/base.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         {% if jquery %}
-        <script src="{{ url_for('static', filename='jquery-3.3.1.min.js') }}" type="text/javascript"></script>
-        <script src="{{ url_for('static', filename='skitter.js') }}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename='js/skitter.js') }}" type="text/javascript"></script>
         {% endif %}
         {% if title %}
         <title>{{ title }}</title>
@@ -12,7 +12,7 @@
         <title>Skitter</title>
         {% endif %}
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheet.css') }}" />
-        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
         {% if scripts %}
         {% block scripts %}{% endblock %}
         {% endif %}
