--- a/frontend/app/ui/templates/index.html
+++ b/frontend/app/ui/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block scripts %}
-<script src="{{ url_for('static', filename='index.js')}}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='js/index.js')}}" type="text/javascript"></script>
 {% endblock %}
 
 {% block content %}
@@ -22,6 +22,6 @@
         <p>Because little blue birds are dumb.</p>
         <!-- <p>Note: not guaranteed to be free of Russian influence.</p> -->
     </div>
-    <img src="{{ url_for('static', filename='skitter.png') }}" alt="Skitter Squirrel" class="box" height="300" width="300" />
+    <img src="{{ url_for('static', filename='img/skitter.png') }}" alt="Skitter Squirrel" class="box" height="300" width="300" />
 </div>
 {% endblock %}
