--- a/frontend/app/ui/static/stylesheet.css
+++ b/frontend/app/ui/static/stylesheet.css
@@ -2,56 +2,51 @@ body {
     margin: auto;
     width: 45em;
     padding: 0 0 1em 0;
-    font-size: 1em;
-    line-height: 1.5em;
+    line-height: 1em;
     color: #6c3c17;
     font-family: Arial;
     background-color: #ffba78;
 }
 
-.login-container {
-    float: right;
-    padding: 0 1em;
+h1 {
+    font-size: 2em;
 }
 
-.login-block {
+section.login {
+    float: right;
+    padding: 0 2em;
+}
+
+section.main {
     margin: 1em auto;
-    padding: 2em 1em;
-    height: auto;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    padding: 2em;
     background-color:#eeeeee;
     -webkit-box-shadow: 0 0 1em 0.5em;
     -moz-box-shadow: 0 0 1em 0.5em;
     box-shadow: 0 0 1em 0.5em;
 }
 
-.box img {
+#login-logo {
     float: right;
+    left: 0;
 }
 
-.form {
+form {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding: 0em 1em;
 }
 
-.form li {
+ul {
     list-style: none;
-    padding: 0.25em 0em;
 }
 
-.login {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    padding: 0.25em 1em;
-    border: 0;
-    background: none;
-    box-shadow: none;
-    border-radius: 0em;
-    background-color: #ee7b23;
-    color: #6c3c17;
-    font-weight: bold;
+li.form-item {
+    padding: 0.25em 0;
 }
 
-.input {
+input {
     -webkit-appearance: none;
     -moz-appearance: none;
     padding: 0.25em 1em;
@@ -61,10 +56,18 @@ body {
     color: #6c3c17;
 }
 
+input[type=submit] {
+    border: 0;
+    border-radius: 0em;
+    background-color: #ee7b23;
+    font-weight: bold;
+}
+
 .border {
     border-radius: 0.2em;
 }
 
 #errorText {
     color: #ff0000;
+    font-size: 0.8em;
 }
