Add template for internal pages
All "internal" pages should have a floating navbar at the top of the page.
This template will make it easy to add that navbar to all pages.

--- a/frontend/app/ui/templates/dashboard.html
+++ b/frontend/app/ui/templates/dashboard.html
@@ -1,5 +1,9 @@
-{% extends "base.html" %}
+{% extends "internal.html" %}
 
-{% block content %}
-<h1>This will be the user dashboard, eventually...</h1>
+{% block scripts %}
+<!-- test -->
+{% endblock %}
+
+{% block internal_page %}
+<!-- test2 -->
 {% endblock %}
