--- a/frontend/app/ui/templates/internal.html
+++ b/frontend/app/ui/templates/internal.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<header class="page-header">
+<header class="page-header border">
     <nav>
-        <a href="/dashboard">Skitter</a> | 
-        <a href="/settings">Settings</a>
+        <a href="/dashboard" class="nav-link">Skitter</a>
+        <a href="/settings" class="nav-link">Settings</a>
     </nav>
 </header>
 {% block internal_page %}{% endblock %}
