Center the links in the navbar
Might as well make the navbar full-page width.

--- a/frontend/app/ui/templates/internal.html
+++ b/frontend/app/ui/templates/internal.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <header class="page-header border">
-    <nav>
+    <nav class="page-header">
         <a href="/dashboard" class="nav-link">Skitter</a>
         <a href="/settings" class="nav-link">Settings</a>
     </nav>
