--- a/frontend/app/ui/static/stylesheet.css
+++ b/frontend/app/ui/static/stylesheet.css
@@ -18,19 +18,28 @@ section.login {
 }
 
 section.main {
-    margin: 1em auto;
+    margin: 4em auto;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
+}
+
+section.middle-col {
+    flex: 2;
+    background-color: #eeeeee;
     padding: 2em;
-    background-color:#eeeeee;
     -webkit-box-shadow: 0 0 1em 0.5em;
-    -moz-box-shadow: 0 0 1em 0.5em;
-    box-shadow: 0 0 1em 0.5em;
+       -moz-box-shadow: 0 0 1em 0.5em;
+            box-shadow: 0 0 1em 0.5em;
+}
+
+section.skits {
+    flex: 2;
+    display: flex;
+    flex-flow: column-reverse;
 }
 
 #login-logo {
-    float: right;
     left: 0;
 }
 
@@ -74,11 +83,25 @@ input[type=submit] {
 
 header.page-header {
     position: fixed;
+    display: flex;
     top: 0;
-    left: auto;
-    right: auto;
-    width: 40em;
-    margin: 1em auto;
+    left: 0;
+    width: 100%;
     padding: 0.5em;
     background-color: #a8fcf6;
+}
+
+nav.page-header {
+    margin: 0 auto;
+    justify-content: center;
+}
+
+aside.user-sidebar {
+    flex: 1;
+    display: flex;
+    flex-direction: column; 
+}
+
+a.username {
+    /* TODO */
 }
