Allow different body widths on different pages
The login/index page should have a smaller width than the internal pages, and
some CSS magic was added to achieve this.  Also, shoutout to git add
--interactive - this stuff is hella nice!

--- a/frontend/app/ui/static/stylesheet.css
+++ b/frontend/app/ui/static/stylesheet.css
@@ -1,11 +1,15 @@
 body {
     margin: auto;
-    width: 45em;
     padding: 0 0 1em 0;
+    width: 60em;
     line-height: 1em;
     color: #6c3c17;
     font-family: Arial;
     background-color: #ffba78;
+}
+
+body.login {
+    width: 45em;
 }
 
 h1 {
