--- a/frontend/app/ui/templates/internal.html
+++ b/frontend/app/ui/templates/internal.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<header class="page-header border">
-    <nav class="page-header">
-        <a href="/dashboard" class="nav-link">Skitter</a>
-        <a href="/settings" class="nav-link">Settings</a>
-    </nav>
-</header>
+<body>
+    <header class="page-header border">
+        <nav class="page-header">
+            <a href="/dashboard" class="nav-link">Skitter</a>
+            <a href="/settings" class="nav-link">Settings</a>
+        </nav>
+    </header>
+</body>
 {% block internal_page %}{% endblock %}
 {% endblock %}
