--- a/frontend/app/ui/templates/dashboard.html
+++ b/frontend/app/ui/templates/dashboard.html
@@ -8,7 +8,7 @@
 <section class="main">
     <aside class="user-sidebar">
         <img alt="Profile Picture" height=100 width=100 id="main-profile-pic" />
-        <a class="username" href="/profile">Username</a>
+        <a class="username main-username" href="/profile">Username</a>
     </aside>
     <section class="middle-col">
         <input id="new-skit" placeholder="What's on your mind?" />
