Finished stylesheet for dashboard (for now...)
I still can't figure out that sidebar, but I'll get it eventually.  Just not
right now...

--- a/frontend/app/ui/static/stylesheet.css
+++ b/frontend/app/ui/static/stylesheet.css
@@ -102,9 +102,10 @@ nav.page-header {
 
 aside.user-sidebar {
     flex: 1;
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     background-color: #a8fcf6;
+    height: fit-content;
     margin: 0 4em 0 0;
     padding: 1em;
     -webkit-box-shadow: 0 0 1em 0.5em;
