Redo skit structure with image and buttons
The production, non-placeholder skit structure has been started - with profile
pictures, buttons, username, etc.

--- a/frontend/app/ui/static/stylesheet.css
+++ b/frontend/app/ui/static/stylesheet.css
@@ -59,6 +59,10 @@ li.form-item {
     padding: 0.25em 0;
 }
 
+img.skit-profile-pic {
+    float: left;
+}
+
 input {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -116,6 +120,8 @@ aside.user-sidebar {
 a.username {
     color: #6c3c17;
     text-decoration: none;
+    font-weight: bold;
+    padding: 0.25em 0.1em;
 }
 
 a.main-username {
