Remove form once reply has been submitted
The reply input box should disappear once the skit reply has been submitted.

--- a/frontend/app/ui/templates/dashboard.html
+++ b/frontend/app/ui/templates/dashboard.html
@@ -12,8 +12,8 @@
     </aside>
     <section class="middle-col">
         <form id="post-skit">
-            <input id="new-skit" placeholder="What's on your mind?" />
-            <input id="submit-skit" type="submit" value="Post!" />
+            <input class="new-skit" placeholder="What's on your mind?" />
+            <input class="submit-skit" type="submit" value="Post!" />
             <span id="errortext"></span>
         </form>
         <section class="skits">
@@ -29,6 +29,7 @@
                 natoque penatibus et magnis dis parturient.</p>
                 <button id='toggle-12345' type="button" class="show-replies">Replies</button>
                 <button id='reply-12345' type="button" class="add-reply">Respond</button><br />
+                <section id='12345-response'></section>
                 <section id='12345-replies'></section>
             </article>
         </section>
