--- a/frontend/app/ui/templates/dashboard.html
+++ b/frontend/app/ui/templates/dashboard.html
@@ -21,16 +21,16 @@
                 <h1>Test skit</h1>
                 <p>Hi!</p>
             </article>
-            <article id='12345' class="skit">
+            <article id="12345" class="skit">
                 <img src="{{ url_for('static', filename='img/default-profile.png') }}" alt="Skit Profile Picture" class="skit-profile-pic" height=64 width=64 />
                 <a class="username" href="/profile/xyz">Username</a>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                 Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
                 natoque penatibus et magnis dis parturient.</p>
-                <button id='toggle-12345' type="button" class="show-replies">Replies</button>
-                <button id='reply-12345' type="button" class="add-reply">Respond</button><br />
-                <section id='12345-response'></section>
-                <section id='12345-replies'></section>
+                <button id="toggle-12345" type="button" class="show-replies">Replies</button>
+                <button id="reply-12345" type="button" class="add-reply">Respond</button><br />
+                <section id="12345-response"></section>
+                <section id="12345-replies"></section>
             </article>
         </section>
     </section>
