Modify index page to support sign-ups
Initially, the landing page had no way to allow people to sign up.  That has
been changed.

--- a/frontend/app/ui/templates/index.html
+++ b/frontend/app/ui/templates/index.html
@@ -17,7 +17,8 @@
                         <li class="form-item"><input type="text" id="username" placeholder="Username" class="border" /></li>
                         <li class="form-item"><input type="password" id="password" placeholder="Password" class="border" /></li>
                         <li class="form-item">
-                            <input type="submit" value="Log In" class="border" />
+                            <input id="log-in" type="submit" value="Log In" class="border" />
+                            <input id="sign-up" type="submit" value="Sign Up" class="border" /><br />
                             <span id="errorText"></span>
                         </li>
                     </ul>
