Use classes for error borders on the landing page
Why manually set CSS attributes when you can just add a new class from the
stylesheet?  This makes so much more sense.  That stylesheet is getting long AF
though.

--- a/frontend/app/ui/static/stylesheet.css
+++ b/frontend/app/ui/static/stylesheet.css
@@ -80,6 +80,10 @@ input[type=submit] {
     font-weight: bold;
 }
 
+input.error {
+    border-color: #ff0000;
+}
+
 .border {
     border-radius: 0.2em;
 }
