--- a/frontend/app/ui/templates/new_account.html
+++ b/frontend/app/ui/templates/new_account.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 
+{% block scripts %}
+<script src="{{ url_for('static', filename='js/new_account.js') }}" type="text/javascript"></script>
+{% endblock %}
+
 {% block content %}
 <body class="login">
     <section class="main border">
         <section class="middle-col">
             <h1>Welcome to Skitter!</h1>
             <p>We just need some info before you get started.</p>
-            <form id="new-acct-form">
+            <form id="new-acct-form" action="/newUser" method="POST" enctype="multipart/form-data">
                 <ul>
                     <li class="form-item">
                         <label>Choose a username:</label>
@@ -19,18 +23,21 @@
                     <li class="form-item">
                         <label>Confirm password:</label>
                         <input type="password" id="second-password" class="border">
+                        <span id="error-text"></span>
                     </li>
                     <li class="form-item">
                         <label>Upload a profile picture!</label><br />
                         <label>Pictures must be no more that 1 MB, and must be
                         a JPEG, PNG, or GIF filetype.</label><br />
                         <input type="file" id="picture-upload">
+                        <span id="upload-error-text"></span>
                     </li>
                     <li>
                         <label>Email address:</label>
                         <input type="email" id="email" class="border">
                     </li>
                     <li><input type="submit" value="Sign me up!" class="border"></li>
+                    <span id="form-error-text"></span>
                 </ul>
             </form>
         </section>
