Fix poor templating of internal pages
I really screwed up the HTML on the dashboard page.  It has been fixed, and a
design oversight on the internal template has been fixed.

--- a/frontend/app/ui/templates/internal.html
+++ b/frontend/app/ui/templates/internal.html
@@ -8,6 +8,8 @@
             <a href="/settings" class="nav-link">Settings</a>
         </nav>
     </header>
-</body>
+    <section class="main">
 {% block internal_page %}{% endblock %}
+    </section>
+</body>
 {% endblock %}
