--- a/frontend/app/ui/templates/new-account.html
+++ b/frontend/app/ui/templates/new-account.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block scripts %}
-<script src="{{ url_for('static', filename='js/new_account.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='js/settings.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='js/new-account.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block content %}
