Begin scripting for settings page
It's a start but heyo it's better than nothing

--- a/frontend/app/ui/templates/settings.html
+++ b/frontend/app/ui/templates/settings.html
@@ -2,6 +2,7 @@
 
 {% block scripts %}
 <script src="{{ url_for('static', filename='js/settings.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='js/settings-page.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block internal_page %}
