Add span for username error text
Gotta notify the user if they choose a taken username.

--- a/frontend/app/ui/templates/settings.html
+++ b/frontend/app/ui/templates/settings.html
@@ -17,6 +17,7 @@
                 <input type="text" id="username" placeholder="">
             </li>
             <li class="form-item"><input type="submit" value="Change"></li>
+            <li class="form-item"><span id="username-error-text"></span></li>
         </form>
         <form id="change-password">
             <li class="form-item"><h2>Password</h2></li>
