Modify dashboard to be profile page
The dashboard template copy has been modified to remove the "post tweet" bar at
the beginning.  That was pretty much the only change.  Profiles are dead
simple, yo.

--- a/frontend/app/ui/templates/profile.html
+++ b/frontend/app/ui/templates/profile.html
@@ -7,14 +7,9 @@
 {% block internal_page %}
 <aside class="user-sidebar">
     <img alt="Profile Picture" height=100 width=100 id="main-profile-pic" />
-    <a class="username main-username" href="/profile">Username</a>
+    <a class="username main-username" href="/profile/{{ user }}">Username</a>
 </aside>
 <section class="middle-col">
-    <form id="post-skit">
-        <input class="new-skit" placeholder="What's on your mind?" />
-        <input class="submit-skit" type="submit" value="Post!" />
-        <span id="errortext"></span>
-    </form>
     <section class="skits">
         <article class="skit">
             <h1>Test skit</h1>
