--- a/frontend/app/ui/templates/internal.html
+++ b/frontend/app/ui/templates/internal.html
@@ -6,6 +6,7 @@
         <nav class="page-header">
             <a href="/dashboard" class="nav-link">Skitter</a>
             <a href="/settings" class="nav-link">Settings</a>
+            <a href="/logout" class="nav-link">Log Out</a>
         </nav>
     </header>
     <section class="main">
