Fix file upload size check errors
I tried to pass a nonexistant file to code on the page, and guess what - it
didn't work!  Undefined errors were thrown because it attempted to call a
function on a nonexistant file object.  This is what happens when you write
code at 3 AM without testing it...

--- a/frontend/app/ui/templates/settings.html
+++ b/frontend/app/ui/templates/settings.html
@@ -24,7 +24,7 @@
             <li class="form-item">
                 <label>Upload New Picture:</label>
                 <input type="file" id="picture-upload">
-                <span id="upload-error=text"></span>
+                <span id="upload-error-text"></span>
             </li>
             <li class="form-item"><input type="submit" value="Change"></li>
         </form>
