Update new account page to simply ask for username
That's all that really needs to be done.  Everything else will be defaults.

--- a/frontend/app/ui/templates/new-account.html
+++ b/frontend/app/ui/templates/new-account.html
@@ -16,20 +16,8 @@
                     <li class="form-item">
                         <label>Choose a username:</label>
                         <input type="text" id="username" class="border">
+                        <label>(Make it a good one!)</label>
                     </li>
-                    <li class="form-item">
-                        <label>Upload a profile picture!</label><br />
-                        <label>Pictures must be no more that 1 MB, and must be
-                        a JPEG, PNG, or GIF filetype.</label><br />
-                        <input type="file" id="picture-upload">
-                        <span id="upload-error-text"></span>
-                    </li>
-                    <li>
-                        <label>Email address:</label>
-                        <input type="email" id="email" class="border">
-                    </li>
-                    <li><input type="submit" value="Sign me up!" class="border"></li>
-                    <span id="form-error-text"></span>
                 </ul>
             </form>
         </section>
