Revert part of new-account page changes
I removed a little too much from the new account page.  For example, I removed
the button you use to submit the dang thing.  That's pretty important to keep
in there.

--- a/frontend/app/ui/templates/new-account.html
+++ b/frontend/app/ui/templates/new-account.html
@@ -16,8 +16,10 @@
                     <li class="form-item">
                         <label>Choose a username:</label>
                         <input type="text" id="username" class="border">
-                        <label>(Make it a good one!)</label>
                     </li>
+                    <li><label>(Make it a good one!)</label></li>
+                    <li><input type="submit" value="Sign me up!" class="border"></li>
+                    <span id="form-error-text"></span>
                 </ul>
             </form>
         </section>
