Update new account page with new functionality
Since the user can't change their display name, we only need to either create
their user or not create their user.

--- a/frontend/app/ui/templates/new-account.html
+++ b/frontend/app/ui/templates/new-account.html
@@ -10,18 +10,9 @@
     <section class="main border">
         <section class="middle-col">
             <h1>Welcome to Skitter!</h1>
-            <p>We just need some info before you get started.</p>
-            <form id="new-acct-form" action="/newUser" method="POST" enctype="multipart/form-data">
-                <ul>
-                    <li class="form-item">
-                        <label>Choose a username:</label>
-                        <input type="text" id="username" class="border">
-                    </li>
-                    <li><label>(Make it a good one!)</label></li>
-                    <li><input type="submit" value="Sign me up!" class="border"></li>
-                    <span id="form-error-text"></span>
-                </ul>
-            </form>
+            <p>Are you sure you want to create an account?</p>
+            <button id="accept" type="button">Duh!</button>
+            <button id="deny" type="button">Heck No!</button>
         </section>
     </section>
 </body>
