--- a/frontend/app/ui/templates/internal.html
+++ b/frontend/app/ui/templates/internal.html
@@ -7,6 +7,7 @@
             <a href="/dashboard" class="nav-link">Skitter</a>
             <a href="/settings" class="nav-link">Settings</a>
             <a href="/logout" class="nav-link">Log Out</a>
+            <a href="/search" class="nav-link">Search</a>
         </nav>
     </header>
     <section class="main">
