Properly style the search results

--- a/frontend/app/ui/static/stylesheet.css
+++ b/frontend/app/ui/static/stylesheet.css
@@ -151,3 +151,8 @@ a.username:hover {
     text-decoration-style: dotted;
     text-decoration-color: #34c3b9;
 }
+
+.result-user {
+    float: left;
+    clear: left;
+}
