--- a/frontend/app/ui/templates/dashboard.html
+++ b/frontend/app/ui/templates/dashboard.html
@@ -7,7 +7,7 @@
 {% block internal_page %}
 <section class="middle-col">
     <form id="post-skit">
-        <input class="new-skit" placeholder="What's on your mind?" />
+        <input id="skit-content" class="new-skit" placeholder="What's on your mind?" />
         <input class="submit-skit" type="submit" value="Post!" />
         <span id="errortext"></span>
     </form>
